--- a/css/navbar-footer.css
+++ b/css/navbar-footer.css
@@ -1,7 +1,15 @@
-html {
-  position: relative;
-  min-height: 100%;
-}
+/********************** ONLYING STYLING FOR NAVBAR AND FOOTER GOES HERE **********************/
+
+
+
+
+
+/********************** Navbar **********************/
+
+
+
+
+/*********************** Footer **********************/
 .footer {
   position: absolute;
   bottom: 0;
@@ -14,49 +22,8 @@ html {
     font-size: 1.25em;
 }
 
-
-body > .container {
-  padding: 60px 15px 0;
-}
 .container .text-muted {
   margin: 20px 0;
-}
-
-.footer > .container {
-  padding-right: 15px;
-  padding-left: 15px;
-}
-
-code {
-  font-size: 80%;
-}
-
-.navbar-container{
-  color: grey;
-}
-
-* {
-  text-align: center;
-}
-
-#navbar-container{
-  display: flex;
-  flex-direction: row;
-  align-items: center;
-    height: 50px;
-}
-
-#navbar-list{
-  list-style: none;
-  display: flex;
-  flex-direction: row;
-  justify-content: flex-end;
-
-}
-
-#navbar-list li{
-  color: white;
-    margin-left: 5%;
 }
 
 body {
@@ -70,8 +37,5 @@ body {
   /* Set the fixed height of the footer here */
   height: 60px;
   background-color: #f5f5f5;
+  text-align: center;
 }
-.container .text-muted {
-  margin: 20px 0;
-}
-
