--- a/partials/navbar.html
+++ b/partials/navbar.html
@@ -19,35 +19,10 @@
     <ul class="nav navbar-nav navbar-right">
     		<!-- ng-model for text -->
       <li><a ng-href="#!/register"><span class="glyphicon glyphicon-user"></span> Sign Up</a></li>
-      <li><a ng-href="#" ng-click="openLoginModal($scope)"><span class="glyphicon glyphicon-log-in"></span> Login</a></li>
+      <li><a ng-href="#" ng-click="openLoginModal()"><span class="glyphicon glyphicon-log-in"></span> Login</a></li>
     </ul>
   </div>
 </nav>
 
-
-
-
-<div class="modal fade" tabindex="-1" role="dialog" id="loginModal">
-      <div class="modal-dialog modal-sm" role="document">
-       <div class="modal-content">
-          <div class="modal-header">
-            <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
-            <h4 class="modal-title" ng-model="header">Login</h4>
-          </div>
-          <div class="modal-body" >
-            <section class="form-group">
-              <h4>Welcome Back</h4>
-              <div>
-                Email: <input class="form-control" type="text" autofocus="true"  ng-model="user.email">
-                Password: <input class="form-control" type="password" autofocus="true"  ng-model="user.password">
-              </div> 
-            </section>
-          </div>
-          <div class="modal-footer">
-            
-            <button class="btn btn-primary"  data-dismiss="modal">Login</button>
-            <button class="btn btn-secondary" data-dismiss="modal">Cancel</button>
-          </div>
-      </div><!-- /.modal-content -->
-    </div><!-- /.modal-dialog -->
-  </div><!-- /.modal -->
+<!-- Modal Login Window (login.html) -->
+<div ng-include="'partials/login.html'"></div>
