Hooked up profile button in navbar

--- a/css/styles.css
+++ b/css/styles.css
@@ -1,11 +1,12 @@
+/* Input fields in register modal */
+#register-input-fields{
+	margin: 0 2.5%;
+}
 
 
-
-
-
-
-
-
+#profile-buttons{
+	text-align: center;
+}
 
 
 
