--- a/partials/navbar.html
+++ b/partials/navbar.html
@@ -4,10 +4,10 @@
       <a class="navbar-brand" ng-href="#!/">Quick Grade</a>
     </div>
     <ul class="nav navbar-nav">
-      <li class="active" ng-show="isLoggedIn"><a ng-href="#!/profile">Profile</a></li>
+      <li class="active" ng-show="isLoggedIn"><a ng-href="#!/{{user}}" ng-click="goToUserProfile()">Profile</a></li>
       <li><a ng-href="#">Quick Grade</a></li>
       <li class="dropdown">
-      	<a class="dropdown-toggle" data-toggle="dropdown" ng-href="#">My Classes
+      	<a class="dropdown-toggle" ng-show="isLoggedIn" data-toggle="dropdown" ng-href="#">My Classes
         <span class="caret"></span></a>
         <ul class="dropdown-menu">
           <li><a ng-href="#!/">Calculus II</a></li>
@@ -18,11 +18,14 @@
     </ul>
     <ul class="nav navbar-nav navbar-right">
     		<!-- ng-model for text -->
-      <li><a ng-href="#!/register"><span class="glyphicon glyphicon-user"></span> Sign Up</a></li>
-      <li><a ng-href="#" ng-click="openLoginModal()"><span class="glyphicon glyphicon-log-in"></span> Login</a></li>
+      <li><a ng-href="#" ng-show="!isLoggedIn" ng-click="openRegisterModal()"><span class="glyphicon glyphicon-user"></span> Sign Up</a></li>
+      <li><a ng-href="#" ng-show="!isLoggedIn" ng-click="openLoginModal()"><span class="glyphicon glyphicon-log-in"></span> Login</a></li>
+      <li><a ng-href="#" ng-show="isLoggedIn" ng-click="logout()"><span class="glyphicon glyphicon-log-in"></span> Logout</a></li>
     </ul>
   </div>
 </nav>
 
 <!-- Modal Login Window (login.html) -->
 <div ng-include="'partials/login.html'"></div>
+<!-- Modal Register Window (register.html) -->
+<div ng-include="'partials/register.html'"></div>
