--- a/partials/profile.html
+++ b/partials/profile.html
@@ -1,2 +1,11 @@
 <h1 >Profile</h1>
 <h3>Hello, {{account.name}}</h3>
+
+<hr>
+
+	
+
+
+<div id="profile-buttons">
+	<button type="button" class="btn btn-default" ng-href="#">Create New Course</button><br>
+</div>
