User can create and delete courses

--- a/partials/navbar.html
+++ b/partials/navbar.html
@@ -26,6 +26,6 @@
 </nav>
 
 <!-- Modal Login Window (login.html) -->
-<div ng-include="'partials/login.html'"></div>
+<div ng-include="'partials/MODAL_login.html'"></div>
 <!-- Modal Register Window (register.html) -->
-<div ng-include="'partials/register.html'"></div>
+<div ng-include="'partials/MODAL_register.html'"></div>
