--- a/partials/single_course_view.html
+++ b/partials/single_course_view.html
@@ -2,12 +2,16 @@
 
 <div>
 	<ul ng-repeat="ass in assignments">
-		<li><strong>{{ass.name}}</strong>: {{ass.pointsEarned}}/{{ass.possiblePoints}}<button class="btn btn-sm btn-secondary" ng-click="showNewGradeField()" ng-show="!enteringGrade">Enter Grade</button><button class="btn btn-sm btn-danger" ng-click="deleteAssignment(ass.id)" ng-show="!enteringGrade">Delete</button></li>
-		<li ng-show="enteringGrade"><input type="number" ng-model="assignments.newGrade"><button class="btn btn-sm btn-primary" ng-click="recordNewGrade(ass)">Submit</button><button class="btn btn-sm btn-secondary" ng-click="cancel()">Cancel</button>
+		<li><strong>{{ass.name}}</strong>: {{ass.pointsEarned}}/{{ass.possiblePoints}}<button class="btn btn-sm btn-secondary" ng-click="showNewGradeField(ass)" ng-show="!enteringGrade">Enter Grade</button><button class="btn btn-sm btn-danger" ng-click="deleteAssignment(ass.id)" ng-show="!enteringGrade">Delete</button></li>
+<!-- 		<li ng-show="enteringGrade"><input type="number" ng-model="assignments.newGrade"><button class="btn btn-sm btn-primary" ng-click="recordNewGrade(ass)">Submit</button><button class="btn btn-sm btn-secondary" ng-click="cancel()">Cancel</button> -->
 	</ul>
 </div>
+<div>
+<input type="number" ng-model="updatedGrade" ng-show="enteringGrade" placeholder="New Grade">
+<button ng-show="enteringGrade" ng-click="updateGrade()"><span class="glyphicon glyphicon-check" ></span></button>
+</div>
+
 
 <button class="btn btn-primary" ng-click="openNewAssignmentModal()">New Assignment</button>
 
 <div ng-include="'partials/MODAL_newAssignment.html'"></div>
-
