Now calculates user's grades in two different styles

--- a/partials/MODAL_newAssignment.html
+++ b/partials/MODAL_newAssignment.html
@@ -11,8 +11,8 @@
               <div>
                 Assignment Name: <input class="form-control" type="text" autofocus="true"  ng-model="newAssignment.name" ng-focus="true">
                 Assignment Description: <input class="form-control" type="text" ng-model="newAssignment.desc">
-                Points Possible: <input class="form-control" ng-model="newAssignment.possiblePoints">
-                Points Received: <input class="form-control" ng-model="newAssignment.pointsEarned" placeholder="Optional...">
+                Points Possible: <input class="form-control" ng-model="newAssignment.possiblePoints" type="number">
+                Points Received: <input class="form-control" ng-model="newAssignment.pointsEarned" placeholder="Optional..." type="number">
               </div> 
             </section>
           </div>
