Course name now displays at top of single course view

--- a/partials/navbar.html
+++ b/partials/navbar.html
@@ -5,14 +5,14 @@
     </div>
     <ul class="nav navbar-nav">
       <li class="active" ng-show="isLoggedIn"><a ng-href="#!/{{user}}" ng-click="goToUserProfile()">Profile</a></li>
-      <li><a ng-href="#">Quick Grade</a></li>
+      <li><a >Quick Grade</a></li>
       <li class="dropdown">
-      	<a class="dropdown-toggle" ng-show="isLoggedIn" data-toggle="dropdown" ng-href="#">My Classes
-        <span class="caret"></span></a>
+      	<a class="dropdown-toggle" ng-show="isLoggedIn" data-toggle="dropdown">My Classes<span class="caret"></span></a>
         <ul class="dropdown-menu">
           <li><a ng-href="#!/">Calculus II</a></li>
-          <li><a ng-href="#!/">Biology 101</a></li>
-          <li><a ng-href="#!/">History 220</a></li>
+
+          <!-- <li><a ng-href="#!/">Biology 101</a></li> -->
+          <!-- <li><a ng-href="#!/">History 220</a></li> -->
         </ul>
       </li>
     </ul>
