--- a/partials/single_course_view.html
+++ b/partials/single_course_view.html
@@ -1,4 +1,4 @@
-<h1>Single Course</h1>
+<h1>{{courseName}}</h1>
 <select ng-init="selectedGradeStyle = styles[0]" ng-model="selectedGradeStyle" ng-options="style for style in styles" ng-change="recalculate()">
 
 </select>
