--- a/partials/navbar.html
+++ b/partials/navbar.html
@@ -2,20 +2,38 @@
   <div class="container-fluid">
     <div class="navbar-header">
       <a class="navbar-brand" ng-href="#!/">Quick Grade</a>
+
+        <button type="button" class="navbar-toggle btn btn-primary dropdown-toggle" ng-init="navCollapsed = true" ng-click="navCollapsed = !navCollapsed">
+<!--           <span class="sr-only">Toggle navigation</span>
+          <span class="icon-bar"></span>
+          <span class="icon-bar"></span>
+          <span class="icon-bar"></span> -->
+        </button>
+
+
+
     </div>
     <ul class="nav navbar-nav">
-      <li class="active" ng-show="isLoggedIn"><a ng-href="#!/{{user}}" ng-click="goToUserProfile()">Profile</a></li>
-      <li><a >Quick Grade</a></li>
-      <li class="dropdown">
-      	<a class="dropdown-toggle" ng-show="isLoggedIn" data-toggle="dropdown">My Classes<span class="caret"></span></a>
-        <ul class="dropdown-menu">
-          <li><a ng-href="#!/">Calculus II</a></li>
+        <li class="active" ng-show="isLoggedIn"><a ng-href="#!/{{user}}" ng-click="goToUserProfile()">Profile</a></li>
+        <li><a >Quick Grade</a></li>
 
-          <!-- <li><a ng-href="#!/">Biology 101</a></li> -->
-          <!-- <li><a ng-href="#!/">History 220</a></li> -->
-        </ul>
-      </li>
+          <li class="dropdown" uib-dropdown>
+            <a  class="btn dropdown-toggle"  uib-dropdown-toggle>My Classes <b class="caret"></b></a>
+            <ul class="dropdown-menu" role="menu">
+                <div  ng-repeat="course in navCourses">
+                    <li><a ng-href="#!/courses/{{course.id}}">{{course.name}}</a></li>
+                </div>
+
+
+<!--               <li><a href="#">Another action</a></li>
+              <li><a href="#">Something else here</a></li>
+              <li><a href="#">Separated link</a></li>
+              <li><a href="#">One more separated link</a></li> -->
+            </ul>
+          </li>
     </ul>
+
+
     <ul class="nav navbar-nav navbar-right">
     		<!-- ng-model for text -->
       <li><a ng-href="#" ng-show="!isLoggedIn" ng-click="openRegisterModal()"><span class="glyphicon glyphicon-user"></span> Sign Up</a></li>
