When user enters grade, buttons and text are disabled.

--- a/css/styles.css
+++ b/css/styles.css
@@ -30,7 +30,14 @@
 	background-color: #24292e;
 }
 
+.red{
+	color: red;
+	border: 2px solid red;
+}
 
+.disabled{
+	color: #808080;
+}
 
 
 /**********/
