--- a/partials/single_course_view.html
+++ b/partials/single_course_view.html
@@ -5,13 +5,16 @@
 <br>
 <div>
 	<ul ng-repeat="ass in assignments">
-		<li><strong>{{ass.name}}</strong>: {{ass.pointsEarned}}/{{ass.possiblePoints}}<button class="btn btn-sm btn-secondary" ng-click="showNewGradeField(ass)" ng-show="!enteringGrade">Enter Grade</button><button class="btn btn-sm btn-danger" ng-click="deleteAssignment(ass.id)" ng-show="!enteringGrade">Delete</button></li>
+		<li ng-class="enteringGrade ? 'disabled' : ''"><strong>{{ass.name}}</strong>: {{ass.pointsEarned}}/{{ass.possiblePoints}}
+		<button class="btn btn-sm btn-secondary" ng-click="showNewGradeField(ass)" ng-class="enteringGrade ? 'disabled' : ''" ng-model="clicked" >Enter Grade</button>
+		<button class="btn btn-sm btn-danger" ng-click="deleteAssignment(ass.id)" ng-class="enteringGrade ? 'disabled' : ''">Delete</button></li>
 <!-- 		<li ng-show="enteringGrade"><input type="number" ng-model="assignments.newGrade"><button class="btn btn-sm btn-primary" ng-click="recordNewGrade(ass)">Submit</button><button class="btn btn-sm btn-secondary" ng-click="cancel()">Cancel</button> -->
 	</ul>
 </div>
 <div>
-<input id="new-grade-btn" type="number" ng-model="updatedGrade" ng-show="enteringGrade" placeholder="New Grade">
+<input id="new-grade-btn" type="number" ng-model="updatedGrade" ng-show="enteringGrade" placeholder="New Grade For {{clickedAssignment}}">
 <button  ng-show="enteringGrade" ng-click="updateGrade()"><span class="glyphicon glyphicon-check" ></span></button>
+<button ng-show="enteringGrade" ng-click="enteringGrade = false"><span>Cancel</span></button>
 </div>
 
 <h2 >Final Grade: {{finalGrade}} </h2>
