--- a/partials/profile.html
+++ b/partials/profile.html
@@ -1,6 +1,8 @@
 <div>
-	<h1 >Profile</h1>
-	<h3>Hello, {{account.name}}</h3>
+	<div id="profile-header">
+		<h1><strong>Profile</strong></h1>
+		<h3>{{account.name}}</h3>
+	</div>
 	<hr>
 
 	<!-- Course View -->
