--- a/partials/course_view.html
+++ b/partials/course_view.html
@@ -1,6 +1,6 @@
+<div id="course-list-container">
 <h3>My Courses</h3>
-<div>
-	<ul ng-repeat="course in courses">
-		<li><a href="#!/courses/{{course.id}}" ng-click="x(course.id)">{{course.name}}</a> <button class="btn btn-sm btn-danger" ng-click="courseDelete(course.id)"><span class="glyphicon glyphicon-trash"></span></button></li>
+	<ul ng-repeat="course in courses" id="course-list">
+		<li><a href="#!/courses/{{course.id}}" ng-click="x(course.id)">{{course.name}}</a> <button class="btn btn-sm btn-danger delete-course-btn" ng-click="courseDelete(course.id)"><span class="glyphicon glyphicon-trash"></span></button></li>
 	</ul>	
 </div>
