--- a/partials/WhatDoINeed.html
+++ b/partials/WhatDoINeed.html
@@ -1,12 +1,14 @@
-<div class="modal fade" tabindex="-1" role="dialog" id="gradeNeededModal">
-      <div class="modal-dialog modal-md" role="document">
-       <div class="modal-content"  ng-controller="ProfileCtrl">
-          <div class="modal-header">
-            <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
-            <h4 class="modal-title" ng-model="header">What Grade Do I Need?</h4>
+<h2>What Do I Need</h2>
+
+
+
+       <div>
+          <div >
+            <button type="button" class="close" ></button>
+            <h4 >What Grade Do I Need?</h4>
           </div>
-          <div class="modal-body" >
-            <section class="form-group">
+          <div>
+            <section>
               <h4>Choose a class</h4>
               <h4>{{finalGrade}}</h4>
 
@@ -27,10 +29,13 @@
 
 
             </section>
-          </div>
-          <div class="modal-footer">
+        </div>
+        <div>
             <button class="btn btn-primary"  data-dismiss="modal" ng-click="seeWhatINeed()">See What I Need</button>
             <button class="btn btn-secondary" data-dismiss="modal">Cancel</button>
-          </div>
-      </div>
-    </div>
+		</div>
+
+		<h2 ng-show="showNecesaryGrade">Grade Needed: {{necesaryGrade}}</h2>
+		<h3 ng-show="showNecesaryGrade">(or {{percentageNecesary}})
+
+
