--- a/partials/profile.html
+++ b/partials/profile.html
@@ -8,10 +8,19 @@
 	<!-- Course View -->
 	<div ng-include="'partials/course_view.html'"></div>
 	<div ng-include="'partials/MODAL_newCourse.html'"></div>
-	<div ng-include="'partials/MODAL_WhatDoINeed.html'"></div>
-		
+
+
 	<div id="profile-buttons">
 		<button type="button" class="btn btn-default" ng-click="openNewCourseModal()">Create New Course</button><br><br>
-		<button type="button" class="btn btn-default" ng-click="openSeeWhatINeedModal()">See What I Need</button>
+		<a ng-href="#!/{{userId}}/whatif"><button type="button" class="btn btn-default">See What I Need</button></a>
 	</div>
+
+
+
+
+
+
+
+
+
 </div>
