--- a/partials/WhatDoINeed.html
+++ b/partials/WhatDoINeed.html
@@ -26,7 +26,7 @@
         <button class="btn btn-secondary" ng-click="clearFields()">Cancel</button>
     </div>
 
-    <h2 ng-show="showNecesaryGrade">Grade Needed: {{necesaryGrade}}</h2>
-    <h3 ng-show="showNecesaryGrade">(or {{percentageNecesary}})</h3>
+    <h2 ng-show="showNecesaryGrade">Grade Needed: {{necesaryGrade}}<span ng-show="showNecesaryGrade"><small> (or {{percentageNecesary}})</small></span></h2>
+    
 </div>
 
