--- a/partials/profile.html
+++ b/partials/profile.html
@@ -2,11 +2,24 @@
 	<div id="profile-header">
 		<h1><strong>Profile</strong></h1>
 		<h3>{{account.name}}</h3>
+	<select ng-model="semester.selectedSemester" ng-options="x for x in semesters" ng-change="getGPA(semester)" ng-init="semester.selectedSemester = semesters[0]">
+	</select>
 	</div>
+
 	<hr>
 
-	<!-- Course View -->
-	<div ng-include="'partials/course_view.html'"></div>
+	<div id="course-list-container">
+		<h3>My Courses</h3>
+		<h4><i>{{semester.selectedSemester}}</i></h4>
+		<div ng-show="showGPA">
+			<h4 >GPA: {{semester.GPA}}</h4>
+			<select ng-model="gradeStyle" ng-change="getGPA(gradeStyle)" ng-options="style for style in styles" ng-init="gradeStyle = styles[0]"></select>
+		</div>
+		<ul ng-repeat="course in courses | filter: semester.selectedSemester" id="course-list">
+			<li><a href="#!/courses/{{course.id}}" ng-click="x(course.id)">{{course.name}}</a> <button class="btn btn-sm btn-danger delete-course-btn" ng-click="courseDelete(course.id)"><span class="glyphicon glyphicon-trash"></span></button></li>
+		</ul>	
+	</div>
+
 	<div ng-include="'partials/MODAL_newCourse.html'"></div>
 
 
