--- a/partials/profile.html
+++ b/partials/profile.html
@@ -9,18 +9,21 @@
 	<hr>
 
 	<div id="course-list-container">
-		<h3>My Courses</h3>
-		<h4><i>{{semester.selectedSemester}}</i></h4>
-		<div ng-show="showGPA">
-			<h4 >GPA: {{semester.GPA}}</h4>
-			<select ng-model="gradeStyle" ng-change="getGPA(gradeStyle)" ng-options="style for style in styles" ng-init="gradeStyle = styles[0]"></select>
+		<div class="col-sm-6">
+			<h3>My Courses</h3>
+			<h4><i>{{semester.selectedSemester}}</i></h4>
+			<div ng-show="showGPA">
+				<h4 >GPA: {{semester.GPA}}</h4>
+				<select ng-model="gradeStyle" ng-change="getGPA(gradeStyle)" ng-options="style for style in styles" ng-init="gradeStyle = styles[0]"></select>
+			</div>
 		</div>
-		<ul ng-repeat="course in courses | filter: semester.selectedSemester" id="course-list">
-			<li><a href="#!/courses/{{course.id}}" ng-click="x(course.id)">{{course.name}}</a> <button class="btn btn-sm btn-danger delete-course-btn" ng-click="courseDelete(course.id)"><span class="glyphicon glyphicon-trash"></span></button></li>
-		</ul>	
+		<div class="col-sm-6">
+			<ul ng-repeat="course in courses | filter: semester.selectedSemester" id="course-list">
+				<li><a href="#!/courses/{{course.id}}" ng-click="x(course.id)">{{course.name}}</a> <button class="btn btn-sm btn-danger delete-course-btn" ng-click="courseDelete(course.id)"><span class="glyphicon glyphicon-trash"></span></button></li>
+			</ul>
+		</div >	
 	</div>
 
-	<div ng-include="'partials/MODAL_newCourse.html'"></div>
 
 
 	<div id="profile-buttons">
@@ -28,6 +31,7 @@
 		<a ng-href="#!/{{userId}}/whatif"><button type="button" class="btn btn-default">See What I Need</button></a>
 	</div>
 
+	<div ng-include="'partials/MODAL_newCourse.html'"></div>
 
 
 
