--- a/partials/profile.html
+++ b/partials/profile.html
@@ -2,31 +2,42 @@
 	<div id="profile-header">
 		<h1><strong>Profile</strong></h1>
 		<h3>{{account.name}}</h3>
-	<select ng-model="semester.selectedSemester" ng-options="x for x in semesters" ng-change="getGPA(semester)" ng-init="semester.selectedSemester = semesters[0]">
-	</select>
+
 	</div>
 
 	<hr>
 
-	<div id="course-list-container">
-		<div class="col-sm-6">
-			<h3>My Courses</h3>
-			<h4><i>{{semester.selectedSemester}}</i></h4>
-			<div ng-show="showGPA">
-				<h4 >GPA: {{semester.GPA}}</h4>
-				<select ng-model="gradeStyle" ng-change="getGPA(gradeStyle)" ng-options="style for style in styles" ng-init="gradeStyle = styles[0]"></select>
+	<div id="main-container" class="">
+		<div id="selector-container" class="col-sm-4 col-md-4 col-lg-4">
+			<h3>{{semester.selectedSemester}}</h3>
+			<div >
+				<h4 ng-show="showGPA"><strong>GPA: {{semester.GPA}}</strong></h4>
+				<strong>Filter By Semester:</strong> <br><select ng-model="semester.selectedSemester" ng-options="x for x in semesters" ng-change="getGPA(semester)" ng-init="semester.selectedSemester = semesters[0]">
+				</select><br>
+				<div ng-show="showGPA"><strong>Style of GPA Calculation: </strong><br><select ng-model="gradeStyle" ng-change="getGPA(gradeStyle)" ng-options="style for style in styles" ng-init="gradeStyle = styles[0]"></select></div>
 			</div>
 		</div>
-		<div class="col-sm-6">
-			<ul ng-repeat="course in courses | filter: semester.selectedSemester" id="course-list">
-				<li><a href="#!/courses/{{course.id}}" ng-click="x(course.id)">{{course.name}}</a> <button class="btn btn-sm btn-danger delete-course-btn" ng-click="courseDelete(course.id)"><span class="glyphicon glyphicon-trash"></span></button></li>
+		<br>
+		<div class="col-sm-7 col-md-7 col-lg-7" id="course-list-container">
+			<h3 id="course-header">Your Courses</h3>
+			<hr>
+			<ul ng-repeat="course in courses | filter: semester.filter" id="course-list">
+				<li>
+					<a class="col-sm-10" href="#!/courses/{{course.id}}" ng-click="x(course.id)">{{course.name}}</a>
+					<div class="col-sm-2" id="delete-course-btns">
+						<button class="btn btn-sm btn-danger delete-course-btn" ng-click="courseDelete(course.id)">
+							<span class="glyphicon glyphicon-trash"></span>
+						</button>
+					</div>
+				</li>
 			</ul>
 		</div >	
 	</div>
 
+	
 
+	<div id="profile-buttons" class="col-sm-12">
 
-	<div id="profile-buttons">
 		<button type="button" class="btn btn-default" ng-click="openNewCourseModal()">Create New Course</button><br><br>
 		<a ng-href="#!/{{userId}}/whatif"><button type="button" class="btn btn-default">See What I Need</button></a>
 	</div>
