--- a/css/styles.css
+++ b/css/styles.css
@@ -226,3 +226,14 @@
 	max-height: 300px;
 	max-width: 300px;
 }
+
+
+
+/* Settings */
+#show-grade-range{
+	margin-left: 2%;
+}
+
+#resetRangesBtn{
+
+}
