--- a/partials/profile.html
+++ b/partials/profile.html
@@ -23,8 +23,11 @@
 			<hr>
 			<ul ng-repeat="course in courses | filter: semester.filter" id="course-list">
 				<li>
-					<a class="col-sm-10" href="#!/courses/{{course.id}}" ng-click="x(course.id)">{{course.name}}</a>
-					<div class="col-sm-2" id="delete-course-btns">
+					<a class="col-sm-9" href="#!/courses/{{course.id}}" ng-click="x(course.id)">{{course.name}}</a>
+					<div class="col-sm-3" id="delete-course-btns">
+						<button class="btn btn-default" ng-click="goToCourseSettings(course.id)">
+							<span class="glyphicon glyphicon-cog" aria-hidden="true"></span>
+						</button>
 						<button class="btn btn-sm btn-danger delete-course-btn" ng-click="courseDelete(course.id)">
 							<span class="glyphicon glyphicon-trash"></span>
 						</button>
