--- a/partials/single_course_view.html
+++ b/partials/single_course_view.html
@@ -5,18 +5,18 @@
 		</select> -->
 	</div>
 	<br>
-	<div class="col-sm-7 col-lg-5">
+	<div class="col-sm-7 col-lg-6">
 	<div id="single-course-view-container" >
 		<h3>Assignments</h3>
 		<hr>
 		<ul ng-repeat="ass in assignments track by ass.id" id="assignment-list">
 			<div ng-class="{red: wasAssignmentClicked(ass)}" id="single-assignment-list-item">
 				<li ng-class="enteringGrade ? 'disabled' : 'enabled'" >
-					<div class="col-sm-7 col-lg-9">
-						<span class="col-sm-6 course-name">{{ass.name}}</span>
-						<span class="col-sm-6 course-grade"><strong>{{ass.pointsEarned}}/{{ass.possiblePoints}}</strong></span>
+					<div class="col-sm-8 col-lg-9">
+						<span class="col-sm-8 course-name">{{ass.name}}</span>
+						<span class="col-sm-4 course-grade"><strong>{{ass.pointsEarned}}/{{ass.possiblePoints}}</strong></span>
 					</div>
-					<div class="col-sm-5 col-lg-3 single-course-delete-btns">
+					<div class="col-sm-4 col-lg-3 single-course-delete-btns">
 						<button class="btn btn-sm btn-secondary" ng-click="showNewGradeField(ass)" ng-class="enteringGrade ? 'disabled' : ''" ng-model="clicked" class="">Change Grade</button>
 						<button class="btn btn-sm btn-danger" ng-click="deleteAssignment(ass.id)" 
 							ng-class="">Delete</button>
@@ -28,15 +28,17 @@
 	</div>
 	</div>
 
-	<div class="col-sm-1 col-lg-2"></div>
-	<div class="col-sm-5 col-lg-3" >
-		<span id="chartDiv"></span>
+	<div id="giant-chart-container" class="col-sm-5 col-lg-6">
+		<div class="col-sm-3 col-lg-3"></div>
+		<div class="col-sm-6 col-lg-6" >
+			<span id="chartDiv"></span>
+		</div>
+		<div class="col-sm-3 col-lg-3"></div>
 	</div>
-	<div class="col-sm-1 col-lg-2"></div>
-	<br>
-	<br>
+	<!-- <br> -->
+	<!-- <br> -->
 
-	<div class="col-sm-6">
+	<div class="col-sm-12">
 		<div id="update-grade-container">
 			<input id="new-grade-btn" type="number" ng-model="updatedGrade" ng-show="enteringGrade" placeholder="New Grade For {{clickedAssignment.name}}">
 			<button class="btn btn-sm btn-primary"  ng-show="enteringGrade" ng-click="updateGrade()">Submit</button>
