--- a/partials/splash_page.html
+++ b/partials/splash_page.html
@@ -2,16 +2,16 @@
     <div id="splash-login-container" class="col-sm-6">
       <form class="form-signin">
         <h2 class="form-signin-heading">Please sign in</h2>
-        <label for="inputEmail" class="sr-only">Email address</label>
-        <input type="email" id="inputEmail" class="form-control" placeholder="Email address" required autofocus>
-        <label for="inputPassword" class="sr-only">Password</label>
-        <input type="password" id="inputPassword" class="form-control" placeholder="Password" required>
+                Email: <input id="login-email-field" class="form-control login-input" type="text" autofocus="true"  ng-model="account.email" ng-focus="true">
+                Password: <input class="form-control login-input" type="password" ng-model="account.password">
         <div class="checkbox">
           <label>
             <input type="checkbox" value="remember-me"> Remember me
           </label>
         </div>
-        <button class="btn btn-lg btn-primary btn-block" type="submit">Sign in</button>
+        <button class="btn btn-lg btn-primary btn-block" type="submit" ng-click="loginUser()">Sign in</button>
+
+        <div id="login-google-btn" class="btn btn-block"><img src="img/google_login.png" width="175" ng-click="loginGoogle()"></div>
       </form>
     </div>
   </div> <!-- /container -->
